# Lab-1

./: CMakeLists.txt  main.c
Double/: CMakeLists.txt  Double.c  Double.h
DynArr/: CMakeLists.txt  DynArr.c  DynArr.h  DynArrErrors.h
Inputs/: CMakeLists.txt  Inputs.c  Inputs.h
Integer/: CMakeLists.txt  Integer.c  Integer.h
Outputs/: CMakeLists.txt  Outputs.c  Outputs.h
TypeInfo/: TypeInfo.h
lib/unity/: unity.c  unity_internals.h
tests/: CMakeLists.txt  test_dynarr.c  test_runner.c
